--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SITE_NAME_HEADER=
+SITE_NAME_HEADER=Geek Power
 SITE_MAIN_LANGUAGE=cs
 SITE_BASE_URL=
 SHOW_CREATED_TIMESTAMP=false
@@ -12,7 +12,7 @@ NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=
 STYLE_SETTINGS_BODY_CLASSES=
 USE_FULL_RESOLUTION_IMAGES=false
-THEME=https://raw.githubusercontent.com/shadowash8/obsidian-aura/HEAD/theme.css
+THEME=https://raw.githubusercontent.com/Spekulucius/obsidian-adrenaline/HEAD/theme.css
 BASE_THEME=dark
 dgHomeLink=true
 dgPassFrontmatter=false
