--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ NOTE_ICON_TITLE=false
 NOTE_ICON_FILETREE=false
 NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
-STYLE_SETTINGS_CSS=body.css-settings-manager { --h1-size: 1.5em; --h2-size: 1.5em; } body.theme-light.css-settings-manager { --h2-color: #A68AF9; --bold-color: #A68AF9; --link-color: #A68AF9; --link-external-color: #A68AF9; } body.theme-dark.css-settings-manager { --h2-color: #A68AF9; --bold-color: #A68AF9; --link-color: #A68AF9; --link-external-color: #A68AF9; }
+STYLE_SETTINGS_CSS=body.css-settings-manager { --h1-size: 1.5em; --h2-size: 1.5em; } body.theme-light.css-settings-manager { --h2-color: #A68AF9; --bold-color: #A68AF9; --link-color: #A68AF9; --link-external-color: #A68AF9; } body.theme-dark.css-settings-manager { --h2-color: #A68AF9; --bold-color: #A68AF9; --link-color: #A68AF9; --link-external-color: #A68AF9; --bg1: #282B37; --bg2: #20222C; --ui1: #2C2F3D; --tx1: #F8F9F3; }
 STYLE_SETTINGS_BODY_CLASSES=theme-dark mod-linux is-frameless is-hidden-frameless obsidian-app styled-scrollbars show-inline-title is-floating-nav auto-full-screen show-ribbon show-view-header minimal-theme minimal-readable minimal-default-light css-settings-manager anp-td-none is-maximized minimal-catppuccin-dark minimal-light minimal-dark links-int-on links-ext-on full-width-media minimal-folding chart-default-width table-default-width img-default-width iframe-default-width map-default-width callouts-default trim-cols h2-l checkbox-circle pdf-seamless-on pdf-invert-dark pdf-blend-light sidebar-tabs-default tab-names-off vault-profile-default ribbon-hidden maximize-tables-off tabs-default tab-stack-top minimal-tab-title-hover default is-focused
 USE_FULL_RESOLUTION_IMAGES=false
 THEME=https://raw.githubusercontent.com/kepano/obsidian-minimal/HEAD/theme.css
